--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>横浜創英放送部公式ページ!!</h1>
     <p>めんどくさいのでデザインはあとで付けます(byWebページ担当者)</p>
-    <a href="http://"></a>
+    <a href="https://ysoeibroadcast.github.io/computer-radio/">コンピューターラジオ(企画中)</a>
 </body>
 </html>
