--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
     <h1>横浜創英放送部公式ページ!!</h1>
     <p>めんどくさいのでデザインはあとで付けます(byWebページ担当者)</p>
+    <h2>固定ページ</h2>
+    <a href="/about.html">about</a>
+    <h2>ポッドキャストラジオ</h2>
     <a href="https://ysoeibroadcast.github.io/computer-radio/">コンピューターラジオ(企画中)</a>
+    <br>
+    <br>
+    <p>&copy;横浜創英放送部2023＆&copy;taisan11</p>
 </body>
 </html>
