--- a/about.html
+++ b/about.html
@@ -11,5 +11,6 @@
     <p>こいつがこの部活のコードネームです</p>
     <p>いつも大会的なやつや、ポッドキャストでなんかやってます</p>
     <em>入部者募集中</em>
+    <p>&copy;横浜創英放送部2023＆&copy;taisan11</p>
 </body>
 </html>
