--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>めんどくさいのでデザインはあとで付けます(byWebページ担当者)</p>
     <h2>固定ページ</h2>
     <a href="/about.html">about</a>
+    <a href="changelog.html"></a>
     <h2>ポッドキャストラジオ</h2>
     <a href="https://ysoeibroadcast.github.io/computer-radio/">コンピューターラジオ(企画中)</a>
     <br>
