--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
     <br>
     <br>
     <p>&copy;横浜創英放送部2023＆&copy;taisan11</p>
+    <!-- Jitoin Fire Tag -->
+    <script type="module">
+        import fire from 'https://cdn.jitoin.com/fire.js';
+        fire('websites/uU9N477N4J');
+    </script>
 </body>
 </html>
