--- a/about.html
+++ b/about.html
@@ -12,5 +12,9 @@
     <p>いつも大会的なやつや、ポッドキャストでなんかやってます</p>
     <em>入部者募集中</em>
     <p>&copy;横浜創英放送部2023＆&copy;taisan11</p>
-</body>
+    <!-- Jitoin Fire Tag -->
+    <script type="module">
+        import fire from 'https://cdn.jitoin.com/fire.js';
+        fire('websites/uU9N477N4J');
+    </script></body>
 </html>
