--- a/changelog.html
+++ b/changelog.html
@@ -12,5 +12,9 @@
     <p>2023/9/13 メインページ、アバウト、更新履歴作成</p>
     <br>
     <p>&copy;横浜創英放送部2023＆&copy;taisan11</p>
-</body>
+    <!-- Jitoin Fire Tag -->
+    <script type="module">
+        import fire from 'https://cdn.jitoin.com/fire.js';
+        fire('websites/uU9N477N4J');
+    </script></body>
 </html>
