--- a/changelog.html
+++ b/changelog.html
@@ -6,15 +6,20 @@
     <title>更新履歴 | 横浜創英放送部</title>
 </head>
 <body>
-    <h1>更新履歴</h1>
-    <p>詳しくはgithubのコミット履歴をチェック!!</p>
-    <br>
-    <p>2023/9/13 メインページ、アバウト、更新履歴作成</p>
-    <br>
-    <p>&copy;横浜創英放送部2023＆&copy;taisan11</p>
+    <marked-content>
+# 更新履歴
+        
+詳しいくはgithubのコミット履歴をどうぞ!
+
+### 2023/9/15
+- 更新履歴をmarkdown化
+### 2023/9/13
+- サイト作成
+    </marked-content>
     <!-- Jitoin Fire Tag -->
     <script type="module">
         import fire from 'https://cdn.jitoin.com/fire.js';
         fire('websites/uU9N477N4J');
-    </script></body>
+    </script>
+    </body>
 </html>
